# fmconfig

./: .editorconfig  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/fmconfig/: cli.py  utils.py
tests/: test_cli.py  test_utils.py
